--- a/libs/pages/elewa/about-us/src/lib/components/elewa-culture-and-values/elewa-culture-and-values.component.scss
+++ b/libs/pages/elewa/about-us/src/lib/components/elewa-culture-and-values/elewa-culture-and-values.component.scss
@@ -1,5 +1,36 @@
 
 
+
+p {
+    width: 80%;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    height: max-content;
+    font-size: 14px;
+    text-align: justify;
+    font-family: var(--elewa-group-website-dmsans-medium);
+    font-size: var(--elewa-group-website-font-size-subheading);
+  }
+  
+  
+  .outer-p {
+    width: 30%;
+    margin-top: 10px;
+    margin-left: 8vw;
+    margin-bottom: 4vh;
+    font-family: var(--elewa-group-website-dmsans-medium);
+    font-size: var(--elewa-group-website-font-size-subheading);
+  }
+  
+  
+  h1 {
+    margin-left: 10vw;
+    font-family: var(--elewa-group-website-dmsans-bold);
+    font-size: var(--elewa-group-website-font-size-heading);
+    font-weight: var(--elewa-group-website-font-weight-title-medium);
+  }
+  
+
 /* Media Queries */
 @media only screen and (max-width: 767px) {
     #title-container {
