fix: set up subheading font size, family and weight

--- a/libs/pages/elewa/about-us/src/lib/components/elewa-culture-and-values/elewa-culture-and-values.component.scss
+++ b/libs/pages/elewa/about-us/src/lib/components/elewa-culture-and-values/elewa-culture-and-values.component.scss
@@ -1,4 +1,14 @@
 
+h2 {
+    font-size: 20px;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    height: 20%;
+    font-size: var(--elewa-group-website-font-size-elewa-text);
+    font-weight: var(--elewa-group-website-font-weight-subtitle);
+  }
+  
+
 img {
     margin-left: 2vw;
     margin-right: 2vw;
